RM#98751 Starting java migration for AOP 8.0 (#14750)
* RM#98751 Starting java migration for AOP 8.0

* More javax replacement

* Update pac4j and swagger version